compose + optional mongo authentication

--- a/.env
+++ b/.env
@@ -1,6 +1,10 @@
 MONGO_PORT=
 MONGO_HOST=
 MONGO_DATABASE=
+MONGO_USERNAME=
+MONGO_ROOT_USERNAME=
+MONGO_ROOT_PASSWORD=
+MONGO_PASSWORD=
 MAIL_HOST=
 MAIL_PORT=
 MAIL_USERNAME=
