--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 configuration.mongo.host=${MONGO_HOST}
 configuration.mongo.port=${MONGO_PORT}
 configuration.mongo.database=${MONGO_DATABASE}
+configuration.mongo.username=${MONGO_USERNAME}
+configuration.mongo.password=${MONGO_PASSWORD}
+spring.data.mongodb.authentication-database = admin
 
 spring.mail.host=${MAIL_HOST}
 spring.mail.port=${MAIL_PORT}
