--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,12 @@ configuration.mongo.username=${MONGO_USERNAME}
 configuration.mongo.password=${MONGO_PASSWORD}
 spring.data.mongodb.authentication-database = admin
 
+spring.rabbitmq.host=${RABBIT_MQ_HOST}
+spring.rabbitmq.port=${RABBIT_MQ_PORT}
+
+configuration.rabbitmq.exchange=${RABBIT_MQ_EXCHANGE}
+configuration.rabbitmq.queue=${RABBIT_MQ_QUEUE}
+
 spring.mail.host=${MAIL_HOST}
 spring.mail.port=${MAIL_PORT}
 spring.mail.username=${MAIL_USERNAME}
