changes the auth database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ configuration.mongo.port=${MONGO_PORT}
 configuration.mongo.database=${MONGO_DATABASE}
 configuration.mongo.username=${MONGO_USERNAME}
 configuration.mongo.password=${MONGO_PASSWORD}
-spring.data.mongodb.authentication-database = admin
+spring.data.mongodb.authentication-database = ${MONGO_DATABASE}
 
 spring.rabbitmq.host=${RABBIT_MQ_HOST}
 spring.rabbitmq.port=${RABBIT_MQ_PORT}
