integration tests for mail sender (embedded smtp) and rabbitmq

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,14 +5,19 @@ configuration.mongo.username=
 configuration.mongo.password=
 spring.data.mongodb.authentication-database=
 
-#spring.rabbitmq.host=${RABBIT_MQ_HOST}
-#spring.rabbitmq.port=${RABBIT_MQ_PORT}
+spring.rabbitmq.host=127.0.0.1
+spring.rabbitmq.port=8888
 
-#configuration.rabbitmq.exchange=${RABBIT_MQ_EXCHANGE}
-#configuration.rabbitmq.queue=${RABBIT_MQ_QUEUE}
+configuration.rabbitmq.exchange=test_exchange
+configuration.rabbitmq.queue=test_queue
 
+
+spring.mail.host=localhost
+spring.mail.port=3025
+spring.mail.username=sender
+spring.mail.password=springboot
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.enable=false
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
 management.metrics.enable.jvm=true
