--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -32,6 +32,7 @@ services:
       MONGO_PASSWORD: ${MONGO_PASSWORD}
       MONGODB_DATA_DIR: /data/db
       MONDODB_LOG_DIR: /dev/null
+      FROM_MAIL_ADDRESS: ${FROM_MAIL_ADDRESS}
     volumes:
       - "./mongo-init/:/docker-entrypoint-initdb.d/"
     networks:
